<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flight_control</name>
  <version>3.0.0</version>
  <description>Low-level flight operations software.</description>
  <maintainer email="isl.torvergata@gmail.com">Intelligent Systems Lab</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>drone_state</depend>
  <depend>dua_app_management</depend>
  <depend>dua_interfaces</depend>
  <depend>dua_node</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>params_manager</depend>
  <depend>px4_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
