<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flight_stack</name>
  <version>1.0.0</version>
  <description>Flight Stack metapackage.</description>
  <maintainer email="isl.torvergata@gmail.com">Intelligent Systems Lab</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>flight_control</depend>
  <depend>flight_stack_bringup</depend>
  <depend>micrortps_agent</depend>
  <depend>px4_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
