<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micrortps_agent</name>
  <version>3.0.0</version>
  <description>microRTPS Bridge agent application.</description>
  <maintainer email="info@dotxautomation.com">dotX Automation s.r.l.</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>fastrtps</build_depend>
  <build_depend>fastcdr</build_depend>

  <depend>builtin_interfaces</depend>
  <depend>dua_app_management</depend>
  <depend>dua_node</depend>
  <depend>dua_qos</depend>
  <depend>geometry_msgs</depend>
  <depend>params_manager</depend>
  <depend>px4_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
